<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ie.careersportal.caocalc.MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aboutText"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/aboutText"
        android:layout_marginTop="5dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/AboutPage"
       />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aboutText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/aboutBullet3"
        android:textSize="@dimen/smallText" />

    <TextView
        android:id="@+id/aboutText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_below="@+id/TextView02"
        android:text="@string/aboutBullet1"
        android:textSize="@dimen/smallText" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_below="@+id/TextView03"
        android:text="@string/aboutBullet5"
        android:textSize="@dimen/smallText" />

    <TextView
        android:id="@+id/mainLinkCAO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aboutText3"
        android:layout_below="@+id/aboutText3"
        android:text="@string/aboutBullet2"
        android:textSize="@dimen/smallText" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mainLinkCAO"
        android:layout_below="@+id/mainLinkCAO"
        android:text="@string/aboutBullet4"
        android:textSize="@dimen/smallText" />

    <TextView
        android:id="@+id/aboutText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aboutText"
        android:layout_alignRight="@+id/aboutText"
        android:layout_below="@+id/aboutText"
        android:layout_marginTop="23dp"
        android:text="@string/aboutBottom"
        android:textSize="@dimen/smallText" />

    <TextView
        android:id="@+id/aboutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/aboutTop"
        android:textSize="@dimen/smallText" />

</RelativeLayout>