<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ie.careersportal.caocalc.MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:gravity="center"
        android:text="@string/menuTitle3"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:textSize="22dp" />

    <Button
        android:id="@+id/courseSearch"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn5_m"
        android:text="@string/CourseSearch"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:layout_below="@+id/about"
        android:layout_alignLeft="@+id/collegesdirect"
        android:layout_alignStart="@+id/collegesdirect" />

    <Button
        android:id="@+id/collegesdirect"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/about"
        android:layout_below="@+id/careersPortal"
        android:layout_marginRight="21dp"
        android:background="@drawable/btn5_m"
        android:text="@string/CollegesDirect"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/careersPortal"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/courseSearch"
        android:layout_alignBottom="@+id/courseSearch"
        android:layout_alignLeft="@+id/about"
        android:layout_marginLeft="24dp"
        android:background="@drawable/btn5_m"

        android:text="@string/CareersPortal"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <Button
        android:id="@+id/smsresults"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/collegesdirect"
        android:layout_alignBottom="@+id/collegesdirect"
        android:layout_alignLeft="@+id/careersPortal"
        android:background="@drawable/btn5_m"

        android:text="@string/messageResults"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <Button
        android:id="@+id/twitter"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/collegesdirect"
        android:layout_below="@+id/collegesdirect"
        android:background="@drawable/btn5_m"

        android:text="@string/Twitter"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/facebook"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn5_m"
        android:text="@string/FaceBook"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:layout_below="@+id/smsresults"
        android:layout_alignLeft="@+id/smsresults"
        android:layout_alignStart="@+id/smsresults"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/aboutBtn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/twitter"
        android:layout_below="@+id/twitter"
        android:background="@drawable/btn5_m"

        android:text="@string/About"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/help"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/aboutBtn"
        android:layout_alignBottom="@+id/aboutBtn"
        android:layout_alignLeft="@+id/facebook"
        android:background="@drawable/btn5_m"

        android:text="@string/Help"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:layout_marginTop="20dp" />

</RelativeLayout>