<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ie.careersportal.caocalc.MainActivity" >

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/remainingResults" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="36dp"
        android:gravity="center" >

        <Button
            android:id="@+id/yestolinks"
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:background="@drawable/btn3"
            android:text="@string/yes"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/higherBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:background="@drawable/btn3"
            android:text="@string/no"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</RelativeLayout>